@@ -108,6 +108,7 @@ Cacti CHANGELOG
 -issue#5502: Errors related to php 8.3 and page generation including a checkbox
 -issue#5503: Note, we could not process all your actions. Details are below
 -issue#5514: DS Stats issues warnings when the RRDfile has not been initialized
+-issue#5527: Upgrade from 0.8.8 to 1.2.25 (latest) fails on db upgrade due to missing data source profile id
 -issue#5534: When deleting a single Data Source the table data_debug is not purged
 
 1.2.25
